# fling

./: Cargo.toml  Dockerfile  README.md  Trunk.toml  fly.toml
fling-gui/: Cargo.toml
fling-gui/src/: events.rs  iroh_node.rs  main.rs  state.rs  toast.rs
fling-native/: Cargo.toml
fling-native/src/: iroh_node.rs  main.rs
fling-server/: Cargo.toml
fling-server/src/: main.rs
fling-wasm/: Cargo.toml  index.html
fling-wasm/src/: iroh_node.rs  main.rs
message-types/: Cargo.toml
message-types/src/: lib.rs
mini-dropbox-gui/: Cargo.toml
mini-dropbox-gui/src/: events.rs  iroh_node.rs  main.rs  message.rs  modals.rs  requests.rs  responses.rs  state.rs  toast.rs
shared/: Cargo.toml
shared/src/: app_events.rs  app_state.rs  lib.rs  network.rs  ui_events.rs  websocket_messages.rs
src/: events.rs  iroh_node.rs  main.rs  message.rs  state.rs
ui/: Cargo.toml
ui/src/: lib.rs  toast.rs
