[workspace]
resolver = "2"
members = ["fling-gui", "fling-server", "message-types"]

[workspace.dependencies]
futures-util = { version = "0.3.31", default-features = false, features = [
  "sink",
  "std",
] }
anyhow = "1.0.100"
tokio = { version = "1.48.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
iroh = "0.95.1"
iroh-blobs = "0.97.0"
