[package]
name = "fling-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
futures-util.workspace = true
anyhow.workspace = true
serde_json.workspace = true
iroh.workspace = true
iroh-blobs.workspace = true
serde.workspace = true

eframe = "0.33.3"
egui = "0.33.3"
egui_material_icons = "0.5.0"
rfd = "0.17.1"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
names = { version = "0.14.0", default-features = false }
egui-toast = "0.19.1"
dirs = "6.0.0"
message_types = { path = "../message-types/" }
n0-future = "0.3.2"
log = "0.4.29"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"
