[package]
name = "fling-native"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe.workspace = true
egui.workspace = true
tokio.workspace = true
futures-util.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true

rfd = "0.17.1"
names = { version = "0.14.0", default-features = false }
dirs = "6.0.0"
n0-future = "0.3.2"
iroh = { workspace = true, default-features = true }
iroh-blobs = { workspace = true, default-features = true }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
ui = { path = "../ui/" }
shared = { path = "../shared/" }
