[package]
name = "fling-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe.workspace = true
egui.workspace = true
futures-util.workspace = true

log = "0.4.29"
iroh = { workspace = true, default-features = true }
iroh-blobs = { workspace = true, default-features = true }
shared = { path = "../shared/" }

gloo-net = "0.6.0"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.70", features = ["console"] }
