[package]
name = "fling-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe.workspace = true
egui.workspace = true
futures-util.workspace = true
anyhow.workspace = true
serde_json.workspace = true

log = "0.4.29"
ui = { path = "../ui/" }
shared = { path = "../shared/" }
gloo-net = { version = "0.6.0", features = ["websocket"] }
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.70", features = [
  "console",
  "Crypto",
  "FileReader",
  "Blob",
  "ReadableStream",
  "ReadableStreamDefaultReader",
] }
iroh = { version = "0.95.1", default-features = false }
iroh-blobs = { version = "0.97.0", default-features = false }
futures = "0.3.31"
rfd = { version = "0.17.1", features = ["file-handle-inner"] }
bytes = "1.11.0"
