[package]
name = "mini-dropbox-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.2"
egui = "0.33.2"
reqwest = "0.12.24"
rfd = "0.16.0"
tokio = { version = "1.48.0", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio-tungstenite = "*"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
directories = "6.0.0"
