[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
iroh.workspace = true
iroh-blobs.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
# iroh = { workspace = true, default-features = false }
# iroh-blobs = { workspace = true, default-features = false }
